--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<!-- dark mode switch -->
+	<div class="theme-switch-wrapper">
+		<span id="toggle-icon">
+			<span class="toggle-text">Light Mode</span>
+			<i class="fas fa-sun"></i>
+		</span>
+		<label class="theme-switch">
+			<input type="checkbox">
+			<span class="slider round"></span>
+		</label>
+	</div>
 	<!-- navigation -->
 	<nav id="nav">
 		<a href="#home">HOME</a>
